# wars

./: .gitmodules  Cargo.toml  README.md
isovariant/: Cargo.toml
isovariant/src/: lib.rs
legacy-wars/: Cargo.toml
legacy-wars-core/: Cargo.toml
legacy-wars-core/src/: fcopy.rs  lib.rs  tcore.rs
legacy-wars/src/: lib.rs
legacy-wars/tests/: a.rs.bak  b.rs
waffle-func-reloop/: Cargo.toml
wars/: Cargo.toml
wars-component/: Cargo.toml
wars-component/src/: lib.rs
wars-macro/: Cargo.toml
wars-macro/src/: lib.rs
wars-macro/tests/: a.rs  b.rs
wars-pit-plugin/: Cargo.toml
wars-pit-plugin/src/: lib.rs
wars-rt/: Cargo.toml
wars-rt/src/: func.rs  gc.rs  lib.rs  wrl.rs
wars-rt/src/func/: unsync.rs
wars-test/: Cargo.toml  build.sh
wars-test/src/: lib.rs
wars/src/: lib.rs  pit.rs
wasm-compile-layer/: Cargo.toml
wasm-compile-layer/src/: lib.rs
