[package]
name = "legacy-wars-core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.86"
portal-pc-waffle.workspace = true
proc-macro2 = "1.0.86"
quote = "1.0.37"
relooper = "0.1.0"
syn = "2.0.75"
waffle-func-reloop = { version = "0.1.0", path = "../waffle-func-reloop" }
