[package]
name = "waffle-func-reloop"
version = "0.4.1"
edition = "2021"
license = "CC0-1.0"
description = "Utility for a Wasm to Rust converter"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
portal-pc-waffle.workspace = true
relooper = "0.1.0"
