[package]
name = "wars-macro"
version = "0.1.1"
edition = "2021"
license = "CC0-1.0"
description = "Wasm to Rust converter"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
expander = {version="2.1.0",features=["pretty"]}
proc-macro2 = "1.0.85"
quote = "1.0.36"
syn = "2.0.66"
wars = { version = "0.1.0", path = "../wars" }
wat = "1.209.1"

[dev-dependencies]
wars-rt = { version = "0.1.0", path = "../wars-rt" }
[lib]
proc-macro = true
