[package]
name = "wars-rt"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = {version="1.0.86",default-features=false}
castaway = "0.2.2"
derive_more = "0.99.17"
either = "1.13.0"
ic-stable-structures = { version = "0.6.5", optional = true }
paste = "1.0.15"
spin = "0.9.8"
tramp = {git="https://github.com/portal-co/trampoline-rs.git",branch="master"}
tuple_list = "0.1.3"
wars-macro = { version = "0.1.0", path = "../wars-macro" }
# wasm_runtime_layer = "0.4.0"

[features]
ic-stable-structures = ["dep:ic-stable-structures"]
std = ["anyhow/std","spin/std"]
