[package]
name = "wasm-compile-layer"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
portal-pc-waffle.workspace = true
proc-macro2 = "1.0.86"
quasiquote = "0.1.1"
quote = "1.0.36"
relooper = "0.1.0"
syn = "2.0.67"
waffle-func-reloop = { version = "0.1.0", path = "../waffle-func-reloop" }
wars = { version = "0.1.0", path = "../wars" }
